[package]
name = "ipp_encoder"
version = "1.0.2"
authors = [ "Quang Phan <vnphanquang@gmail.com>" ]
description = "Internet Printing Protocol encoder-decoder"
license = "MIT"
repository = "https://github.com/vnphanquang/ipp"
documentation = "https://docs.rs/ipp_encoder"
readme = "../README.md"
edition = "2021"
keywords = [ "ipp", "printing", "protocol", "encoder", "decoder" ]
exclude = [ "target", "Cargo.lock" ]
categories = [ "encoding" ]

[lib]
name = "ipp_encoder"
path = "src/lib.rs"

[dependencies]
strum = "0.23"
strum_macros = "0.23"
serde_json = "1.0"

  [dependencies.chrono]
  version = "0.4"
  features = [ "serde" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.serde_with]
  version = "1.11"
  features = [ "macros" ]
